--- a/game.html
+++ b/game.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="game.css">
+   
     <title>GAME</title>
 </head>
 <body>
+    <div class="game">
+        <div class="title"><span>X O</span>GAME </div>
+        <div class="square" id="item1"> </div>
+        <div class="square" id="item2"> </div>
+        <div class="square" id="item3"> </div>
+        <div class="square" id="item4"> </div>
+        <div class="square" id="item5"> </div>
+        <div class="square" id="item6"> </div>
+        <div class="square" id="item7"> </div>
+        <div class="square" id="item8"> </div>
+        <div class="square" id="item8"> </div>
+
+    </div>
     
 
     
